--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -92,6 +92,41 @@ mixin list-of-teams(times)
 								td Pos
 								td 123
 								td 15
+							tr
+								td.indicated
+									span.played.indicator
+								td Name
+								td Pos
+								td 123
+								td 15
+							tr
+								td.indicated
+									span.played.indicator
+								td Name
+								td Pos
+								td 123
+								td 15
+							tr
+								td.indicated
+									span.played.indicator
+								td Name
+								td Pos
+								td 123
+								td 15
+							tr
+								td.indicated
+									span.played.indicator
+								td Name
+								td Pos
+								td 123
+								td 15
+							tr
+								td.indicated
+									span.played.indicator
+								td Name
+								td Pos
+								td 123
+								td 15
 				div.nl-info-table-button
 					div.rank
 						div.rank__stats
