--- a/markup/_layouts/_content/_homepage/field-soccer.jade
+++ b/markup/_layouts/_content/_homepage/field-soccer.jade
@@ -1,8 +1,8 @@
 div.nl-section.nl-create-team.homepage-field.soccer
 	div.row
-		div.col-12
+		div.col-12.no-padding-mobile
 			h5 MY TEAMS
-		div.col-12.col-md-12.col-lg-12.col-xl-12
+		div.col-12.col-md-12.col-lg-12.col-xl-12.no-padding-mobile
 			form.form-signin.dropdown-my-teams
 				.input-group
 					select#country.form-control.custom-select(placeholder='COUNTRY', required='')
@@ -17,7 +17,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 				button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
 			div.nl-team-field
 					div.player-main-block.soccer
-						div.nl-player-block.nl-G-position(data-position="G")
+						div.nl-player-block.nl-GK-position(data-position="GK")
 							img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
@@ -32,42 +32,42 @@ div.nl-section.nl-create-team.homepage-field.soccer
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-DAL-position(data-position="DAL")
+						div.nl-player-block.nl-FLEXL-position(data-position="DL")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-DAR-position(data-position="DAR")
+						div.nl-player-block.nl-DM-position(data-position="DM")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-CM-position(data-position="CM")
+						div.nl-player-block.nl-MM-position(data-position="MM")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-RWM-position(data-position="RWM")
+						div.nl-player-block.nl-MR-position(data-position="MR")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-LWM-position(data-position="LWM")
+						div.nl-player-block.nl-ML-position(data-position="ML")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-RS-position(data-position="RS")
+						div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-LS-position(data-position="LS")
+						div.nl-player-block.nl-AL-position(data-position="AL")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-ST-position(data-position="ST")
+						div.nl-player-block.nl-AR-position(data-position="AR")
 							img(src="assets/img/img-players.png" alt="goalkeeper")
 							div.nl-player-block--data
 								p gronkowski
