--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -63,7 +63,7 @@ div.tab-content(id="top5-manager-content")
     div(role='tabpanel' class='tab-pane active top-level-panel2' id='week3')
         div.content
             div.row
-                div.col-lg-12
+                div.col-10.offset-1.col-lg-12.offset-lg-0
                     ul.nav.menu(role="tablist")
                         li.nav-item
                             a.nav-link.active(data-toggle="tab" href="#manager1" role="tab")
