--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -923,7 +923,7 @@ section.nl-section.nl-players.nl-create-team.soccer
 
                 div.nl-team-field
                     div.player-main-block.soccer
-                        div.nl-player-block.nl-G-position(data-position="G")
+                        div.nl-player-block.nl-GK-position(data-position="GK")
                             img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
@@ -941,49 +941,49 @@ section.nl-section.nl-players.nl-create-team.soccer
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DAL-position(data-position="DAL")
+                        div.nl-player-block.nl-FLEXL-position(data-position="FLEXL")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-DAR-position(data-position="DAR")
+                        div.nl-player-block.nl-DM-position(data-position="DM")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-CM-position(data-position="CM")
+                        div.nl-player-block.nl-MM-position(data-position="MM")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-RWM-position(data-position="RWM")
+                        div.nl-player-block.nl-MR-position(data-position="MR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-LWM-position(data-position="LWM")
+                        div.nl-player-block.nl-ML-position(data-position="ML")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-RS-position(data-position="RS")
+                        div.nl-player-block.nl-FLEXR-position(data-position="FLEXR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-LS-position(data-position="LS")
+                        div.nl-player-block.nl-AL-position(data-position="AL")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-ST-position(data-position="ST")
+                        div.nl-player-block.nl-AR-position(data-position="AR")
                             img(src="assets/img/img-players.png" alt="goalkeeper")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
