--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -13899,7 +13899,7 @@ td:nth-child(4).homepage-list-view {
       font-size: 12px;
       padding: 0.25rem 0.5rem; }
   .matches__content {
-    padding: 0.5rem 1rem; }
+    padding: 0.5rem 0.25rem; }
   .matches__leaders-list {
     list-style: none;
     margin: 0;
@@ -13929,19 +13929,6 @@ td:nth-child(4).homepage-list-view {
     .matches {
       margin-bottom: 1.5rem; } }
 
-.matches::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #0f254f; }
-
-.matches::-webkit-scrollbar {
-  width: 6px;
-  height: 6px; }
-
-.matches::-webkit-scrollbar-thumb {
-  border-radius: 6px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #F5F5F5; }
-
 /* current-contests
 ---------------------------------------- */
 .current-contents {
@@ -13954,6 +13941,7 @@ td:nth-child(4).homepage-list-view {
 
 .table-current-contests .table th,
 .table-current-contests .table td {
+  font-size: 11px;
   padding: 0.5rem 0.5rem;
   text-align: left;
   max-width: 120px;
@@ -14030,13 +14018,28 @@ td:nth-child(4).homepage-list-view {
 
 /* team-field-section
 ---------------------------------------- */
+.nl-live-score .small-padding-live-score {
+  padding: 0 5px; }
+
+.nl-live-score .container-fluid {
+  max-width: 1700px; }
+
+.nl-live-score .dropdown-my-contests {
+  padding: 0 2rem; }
+
+.nl-live-score .custom-select {
+  background-size: contain; }
+
+.nl-live-score .live-current-contest a {
+  margin-bottom: 0.75rem; }
+
 .nl-live-score .rank__no {
   background: #eb9a0d;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#eb9a0d), color-stop(51%, #e57709), to(#eb9a0d));
   background-image: linear-gradient(to bottom, #eb9a0d 0%, #e57709 51%, #eb9a0d 100%); }
 
 .nl-live-score h5 {
-  margin-bottom: 1.875rem; }
+  margin-bottom: 0.75rem; }
 
 .nl-live-score .player-main-block.football {
   min-height: 400px; }
@@ -14065,7 +14068,7 @@ td:nth-child(4).homepage-list-view {
   font-size: 16px;
   margin-bottom: 1rem; }
   .rank__content {
-    padding: 1.5rem 1rem 0.875rem 1rem; }
+    padding: 1rem 1rem 0.375rem 1rem; }
   .rank__no {
     background-color: orange;
     border-top-left-radius: .625rem;
@@ -14089,7 +14092,7 @@ td:nth-child(4).homepage-list-view {
     align-items: flex-end; }
     @media (min-width: 768px) {
       .rank__playlist {
-        height: 96px; } }
+        height: 54px; } }
   .rank__playlist-item {
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -14110,12 +14113,12 @@ td:nth-child(4).homepage-list-view {
     .rank__playlist-item span {
       display: block;
       position: relative;
-      font-size: 14px;
+      font-size: 11px;
       font-weight: 400;
       line-height: 1.2; }
       @media (min-width: 992px) {
         .rank__playlist-item span {
-          font-size: 16px; } }
+          font-size: 13px; } }
     .rank__playlist-item span + span:before {
       content: '';
       display: inline-block;
@@ -14156,7 +14159,8 @@ td:nth-child(4).homepage-list-view {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  min-width: 100px; }
+  max-width: 155px;
+  line-height: 1rem; }
   @media (min-width: 992px) and (max-width: 1680px) {
     .rank__stats.part-of-block {
       display: none; } }
@@ -14201,6 +14205,8 @@ td:nth-child(4).homepage-list-view {
 ---------------------------------------- */
 .nl-live-score-contest-table {
   padding: 0; }
+  .nl-live-score-contest-table .visibility-hidden {
+    visibility: hidden; }
   .nl-live-score-contest-table .rank {
     margin-bottom: 0; }
   .nl-live-score-contest-table .rank__no {
@@ -14227,17 +14233,23 @@ td:nth-child(4).homepage-list-view {
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1; }
+    .nl-live-score-contest-table .rank__title p {
+      margin-bottom: 0;
+      font-size: 12px;
+      line-height: 1rem; }
   .nl-live-score-contest-table .rank__thumb {
     padding: 0.5rem; }
+    .nl-live-score-contest-table .rank__thumb img {
+      max-width: 39px; }
   .nl-live-score-contest-table .table-info3 th,
   .nl-live-score-contest-table .table-info3 td,
   .nl-live-score-contest-table .table-info4 th,
   .nl-live-score-contest-table .table-info4 td {
     font-size: 12px; }
   .nl-live-score-contest-table .indicator {
-    width: 0.75rem;
-    height: 0.75rem;
-    margin: 0 0.25rem; }
+    width: 0.625rem;
+    height: 0.625rem;
+    margin: 0; }
 
 .contact-wrapper {
   background: url(../img/stadion_full.jpg) 0 0 no-repeat;
