--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -45,7 +45,7 @@
 	}
 
 	&__content {
-		padding: calculateRem(8px) calculateRem(16px);
+		padding: 0.5rem 0.25rem;
 	}
 
 	&__leaders-list {
@@ -93,22 +93,22 @@
 	}
 }
 
-// Add custom scrollbar and make visible
-.matches::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #0f254f;
-}
+// // Add custom scrollbar and make visible
+// .matches::-webkit-scrollbar-track {
+// 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+// 	background-color: #0f254f;
+// }
 
-.matches::-webkit-scrollbar {
-	width: 6px;
-	height: 6px;
-}
+// .matches::-webkit-scrollbar {
+// 	width: 6px;
+// 	height: 6px;
+// }
 
-.matches::-webkit-scrollbar-thumb {
-	border-radius: 6px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #F5F5F5;
-}
+// .matches::-webkit-scrollbar-thumb {
+// 	border-radius: 6px;
+// 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+// 	background-color: #F5F5F5;
+// }
 
 /* current-contests
 ---------------------------------------- */
@@ -125,9 +125,11 @@
 }
 
 .table-current-contests {
+
 	.table {
 		th,
 		td {
+			font-size: 11px;
 			padding: 0.5rem 0.5rem;
 			text-align: left;
 			max-width: 120px;
@@ -221,6 +223,26 @@
 // override to nl-create-team.scss
 .nl-live-score {
 
+	.small-padding-live-score {
+		padding: 0 5px;
+	}
+
+	.container-fluid {
+		max-width: 1700px;
+	} 
+
+	.dropdown-my-contests {
+		padding: 0 2rem;
+	}
+
+	.custom-select {
+		background-size: contain;
+	}
+
+	.live-current-contest a {
+		margin-bottom: 0.75rem;
+	}
+
 	.rank__no {
 		background: #eb9a0d;
     	background-image: -webkit-gradient(linear, left top, left bottom, from(#eb9a0d), color-stop(51%, #e57709), to(#eb9a0d));
@@ -228,7 +250,7 @@
 	}
 
 	h5 {
-		margin-bottom: 1.875rem;
+		margin-bottom: 0.75rem;
 	}
 	.player-main-block {
 
@@ -268,7 +290,7 @@
 	margin-bottom: calculateRem(16px);
 
 	&__content {
-		padding: calculateRem(24px) calculateRem(16px) calculateRem(14px) calculateRem(16px);
+		padding: 1rem 1rem 0.375rem 1rem;
 	}
 
 	&__no {
@@ -296,7 +318,7 @@
 		align-items: flex-end;
 
 		@include respond-to(tabletup) {
-			height: 96px;
+			height: 54px;
 		}
 	}
 
@@ -310,12 +332,12 @@
 	  span {
 	  	display: block;
 	  	position: relative;
-	  	font-size: 14px;
+	  	font-size: 11px;
 	  	font-weight: 400;
 	  	line-height: 1.2;
 
 	  	@include respond-to(allwide) {
-	  		font-size: 16px;
+	  		font-size: 13px;
 	  	}
 	  }
 
@@ -389,7 +411,8 @@
 
 	&.part-of-block {
     flex: 1;
-    min-width: 100px;
+    max-width: 155px;
+    line-height: 1rem;
 
 		@media (min-width: 992px) and (max-width: 1680px) {
 			display: none;
@@ -454,6 +477,11 @@
 .nl-live-score-contest-table {
 	padding: 0;
 
+
+	.visibility-hidden {
+		visibility: hidden;
+	}
+
 	.rank {
 		margin-bottom: 0;
 	}
@@ -495,10 +523,20 @@
 	.rank__title {
 		padding: 0.5rem;
 		flex: 1;
+
+		p {
+			margin-bottom: 0;
+			font-size: 12px;
+			line-height: 1rem;
+		}
 	}
 
 	.rank__thumb {
 		padding: 0.5rem;
+
+		img {
+			max-width: 39px;
+		}
 	}
 
 	.table-info3,
@@ -510,8 +548,8 @@
 	}
 
 	.indicator{
-	  width: calculateRem(12px);
-	  height: calculateRem(12px);
-	  margin: 0 calculateRem(4px);
+	  width: calculateRem(10px);
+	  height: calculateRem(10px);
+	  margin: 0;
 	}
 }
